# duckstatsbomb

./: LICENSE  MANIFEST.in  README.md  environment-dev.yml  pyproject.toml  requirements.txt
duckstatsbomb/: __about__.py  __init__.py  opendata.py  parser.py
duckstatsbomb/sql/cache/competitions/: season_ids.sql
duckstatsbomb/sql/cache/events/v8/: related_events.sql
duckstatsbomb/sql/cache/lineups/v4/: lineup_events.sql
duckstatsbomb/sql/competitions/v4/: competitions.sql
duckstatsbomb/sql/event/v8/: events.sql
duckstatsbomb/sql/events/v4/: events.sql  freeze_frames.sql  tactics.sql
duckstatsbomb/sql/events/v8/: events.sql  related_events.sql
duckstatsbomb/sql/lineup/v2/: lineup.sql  lineups_players.sql
duckstatsbomb/sql/lineup/v4/: lineup_formation.sql  lineups_events.sql
duckstatsbomb/sql/lineups/v2/: lineups_players.sql
duckstatsbomb/sql/lineups/v4/: lineup_formations.sql  lineup_positions.sql  lineups_players.sql  lineups_positions.sql
duckstatsbomb/sql/match/v3/: match.sql
duckstatsbomb/sql/matches/: match_ids.sql
duckstatsbomb/sql/matches/v3/: matches.sql
duckstatsbomb/sql/matches/v6/: matches.sql
duckstatsbomb/sql/original/competitions/: season_ids.sql
duckstatsbomb/sql/original/matches/: match_ids.sql
duckstatsbomb/sql/threesixty/v1/: freeze_frame.sql  freeze_frames.sql  threesixty.sql
duckstatsbomb/sql/threesixty/v2/: freeze_frames.sql  threesixty.sql  visible_count.sql  visible_distance.sql
sql/competition/v4/: competition.sql
sql/event/v4/: event.sql
sql/match/v5/: match.sql
sql/threesixty/v1/: threesixty.sql
(+11 files in other folders)
